--- a/kadai_tutorial_output/style.css
+++ b/kadai_tutorial_output/style.css
@@ -19,6 +19,14 @@ header{
   display: flex;
   justify-content: space-between;
 }
+
+/* ナビゲーションのレイアウト */
+#nav-pc {
+  text-align: right;
+  font-size: 14px;
+  padding-top: 15px;
+}
+
 /*ナビゲーションのリンクの装飾*/
 #nav-pc > a {
  text-decoration: none;
